--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
   <!-- Head -->
   <head>
-    <title>HairStyle | Interior Design Bootstrap Theme by WebThemez</title>
+    <title>Beauty Republic</title>
 
     <!-- Meta -->
     <meta charset="utf-8"/>
