--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 				<a class="nav-link js-scroll-trigger" href="#about">About</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+				<a class="nav-link js-scroll-trigger" href="#portfolio"></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="#team">Team</a>
+				<a class="nav-link js-scroll-trigger" href="#team">Find Beauty Suppliers</a>
 			  </li>
 			   <li class="nav-item">
 				<a class="nav-link js-scroll-trigger" href="#price">Price</a>
