--- a/index.html
+++ b/index.html
@@ -40,21 +40,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="blogDropdown" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Blog</a>
-                            <div class="dropdown-menu" aria-labelledby="blogDropdown">
-                                <a class="dropdown-item" href="blog.html">Blog Archive</a>
-                                <a class="dropdown-item" href="blog-single.html">Blog Post</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Pages</a>
-                            <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                                <a class="dropdown-item" href="404.html">404</a>
-                                <a class="dropdown-item" href="coming-soon.html">Coming Soon</a>
-                            </div>
+                        <li class="nav-item">
+                            <a class="nav-link" href="blog-single.html">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
@@ -66,8 +53,13 @@
                                     class="flag-icon flag-icon-squared rounded-circle flag-icon-gb"></span>
                                 Eng</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Download</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">Download <i class="fa fa-arrow-circle-down"></i></a>
+                            <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                                <a class="dropdown-item" href="404.html">Android App</a>
+                                <a class="dropdown-item" href="coming-soon.html">IOS App</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
