shortened intro texts

--- a/index.html
+++ b/index.html
@@ -133,12 +133,10 @@
                       You!
                     </h1>
                     <p>
-                      Join us on this exciting beauty journey and experience the
-                      convenience, luxury, and personalized care our app brings
-                      to your doorstep. Enhance your beauty, indulge in
-                      self-care, and let us pamper you with our top-notch beauty
-                      services, all within the comfort of your own home or
-                      preferred location.
+                      Experience the ultimate convenience with our on-demand
+                      beauty services. Book professional stylists, therapists,
+                      and nail technicians right to your doorstep. Get ready to
+                      indulge in luxury without leaving your home.
                     </p>
                     <div class="carousel-content-btns">
                       <a href="#!" class="btn btn-success">
@@ -162,16 +160,13 @@
               <div class="carousel-item">
                 <div class="row">
                   <div class="col-md-6 carousel-content-wrapper">
-                    <h1>
-                      We believe that everyone deserves to look and feel
-                      beautiful.
-                    </h1>
+                    <h1>Your Beauty, Your Way</h1>
                     <p>
-                      Our pricing is transparent, and we offer various service
-                      options to accommodate different budgets. We strive to
-                      create a platform that celebrates diversity and
-                      inclusivity, ensuring that everyone can find a beauty
-                      expert who understands their unique needs and preferences.
+                      Customize your beauty experience with our extensive range
+                      of services. From haircuts and color to manicures and
+                      facials, we have you covered. Experience the freedom to
+                      look and feel your best, whenever and wherever you want.
+                      Download our app and let us transform your beauty routine.
                     </p>
                     <div class="carousel-content-btns">
                       <a href="#!" class="btn btn-success">
@@ -195,15 +190,14 @@
               <div class="carousel-item">
                 <div class="row">
                   <div class="col-md-6 carousel-content-wrapper">
-                    <h1>Here's how our app works:</h1>
+                    <h1>Safety and Quality Assured</h1>
                     <p>
-                      Simply download it onto your smartphone, sign up, and
-                      browse through our extensive list of beauty services. With
-                      just a few taps, you can select the service you desire,
-                      choose a preferred appointment time, and specify your
-                      location. Our app then matches you with the nearest
-                      available beauty expert who specializes in the service
-                      you've requested.
+                      Your safety is our top priority. We carefully vet every
+                      beauty professional on our platform, ensuring their
+                      expertise and professionalism. From background checks to
+                      secure payments, trust that you're in good hands.
+                      Experience exceptional beauty services with complete peace
+                      of mind.
                     </p>
                     <div class="carousel-content-btns">
                       <a href="#!" class="btn btn-success">
