services and images

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             </div>
             <div class="col-md-6" data-aos="fade-up-left">
               <img
-                src="https://images.squarespace-cdn.com/content/v1/602da7806bfa8068917bc377/96157dfc-7761-40bc-b8ce-fdbf49bacdce/Untitled+%28500+%C3%97+500px%29+%282%29.png?format=500w"
+                src="assets/images/brservicesapp.png"
                 width="468px"
                 alt="about"
                 class="img-fluid"
@@ -314,56 +314,69 @@
       </section>
       <section class="edica-landing-section edica-landing-services">
         <div class="container">
-          <h4 class="edica-landing-section-subtitle">Service We Offer</h4>
+          <h4 class="edica-landing-section-subtitle">Services We Offer</h4>
           <h2 class="edica-landing-section-title">
-            What features you will <br />
-            Get from App.
+            We connect you with realiable beauty service providers near you.
           </h2>
           <div class="row">
             <div class="col-md-6 landing-service-card" data-aos="fade-right">
               <img
-                src="assets/images/picture.svg"
+                src="assets/images/brmakeupservice.jpg"
                 alt="card img"
+                height="200"
+                width="200"
                 class="img-fluid service-card-img"
               />
-              <h4 class="service-card-title">Quick & Easy</h4>
+              <h4 class="service-card-title">Make-Up</h4>
               <p class="service-card-description">
-                Find what you are looking for in a few clicks.
+                Whether it's a natural daytime look, glamorous evening makeup,
+                or a special event, our makeup artists will create a stunning
+                and flawless look tailored to your preferences.
               </p>
             </div>
             <div class="col-md-6 landing-service-card" data-aos="fade-left">
               <img
-                src="assets/images/internet.svg"
+                src="assets/images/brhairstyling.jpg"
+                height="230"
+                width="230"
                 alt="card img"
                 class="img-fluid service-card-img"
               />
-              <h4 class="service-card-title">Large selection</h4>
+              <h4 class="service-card-title">Hair Styling</h4>
               <p class="service-card-description">
-                Wide range of services to choose from.
+                Our skilled hairstylists will help you achieve the perfect
+                hairstyle that suits your personality and enhances your natural
+                beauty.
               </p>
             </div>
             <div class="col-md-6 landing-service-card" data-aos="fade-right">
               <img
-                src="assets/images/goal.svg"
+                src="assets/images/brnailsservice.jpg"
+                height="200"
+                width="200"
                 alt="card img"
                 class="img-fluid service-card-img"
               />
-              <h4 class="service-card-title">High quality</h4>
+              <h4 class="service-card-title">Nail Care</h4>
               <p class="service-card-description">
-                Choose from hundreds of high quality and relevant beauty
-                experts.
+                From manicures and pedicures to nail extensions and intricate
+                nail art, our talented nail technicians will leave you with
+                beautiful, well-groomed nails.
               </p>
             </div>
             <div class="col-md-6 landing-service-card" data-aos="fade-left">
               <img
-                src="assets/images/chat-bubble.svg"
+                src="assets/images/brskincare.jpg"
                 alt="card img"
                 class="img-fluid service-card-img"
               />
-              <h4 class="service-card-title">Up to date</h4>
+              <h4 class="service-card-title">Skincare Treatments</h4>
               <p class="service-card-description">
-                New beauty experts are continuously added and updated to keep
-                them relevant.
+                Rejuvenate your skin with a variety of skincare treatments,
+                including facials, exfoliation, and mask therapies. Our skilled
+                estheticians will analyze your skin type and recommend
+                personalized treatments to help you achieve a healthy, glowing
+                complexion.
               </p>
             </div>
           </div>
