--- a/index.html
+++ b/index.html
@@ -567,9 +567,8 @@
             </button>
           </div>
           <p class="banner-text">
-            Add some helper text here to explain the finer details of your
-            <br />
-            product or service.
+            Download the BeautyRepulic app today and let us bring the salon
+            experience to your doorstep.
           </p>
         </div>
       </div>
@@ -581,7 +580,7 @@
             <a href="index.html" class="footer-brand-wrapper">
               <img
                 src="assets/images/beautyrepubliclogo.png"
-                alt="edica logo"
+                alt="beauty republic logo"
               />
             </a>
             <p class="contact-details">hello@br.com</p>
@@ -589,8 +588,8 @@
             <nav class="footer-social-links">
               <a href="#!"><i class="fab fa-facebook-f"></i></a>
               <a href="#!"><i class="fab fa-twitter"></i></a>
-              <a href="#!"><i class="fab fa-behance"></i></a>
-              <a href="#!"><i class="fab fa-dribbble"></i></a>
+              <a href="#!"><i class="fab fa-instagram"></i></a>
+              <a href="#!"><i class="fab fa-google"></i></a>
             </nav>
           </div>
           <div class="col-md-3">
