--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Edica :: Home</title>
+    <!-- BR favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png" />
+
+    <title>Beauty Republic</title>
     <link rel="stylesheet" href="assets/vendors/flag-icon-css/css/flag-icon.min.css">
     <link rel="stylesheet" href="assets/vendors/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="assets/vendors/aos/aos.css">
@@ -12,13 +18,17 @@
     <script src="assets/vendors/jquery/jquery.min.js"></script>
     <script src="assets/js/loader.js"></script>
 </head>
+
 <body>
     <div class="edica-loader"></div>
     <header class="edica-header">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="index.html"><img src="assets/images/logo.svg" alt="Edica"></a>
-                <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#edicaMainNav" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="index.html"><img src="assets/images/beautyrepubliclogo.png"
+                        alt="Beauty Republic Logo" width="60" height="60" /></a>
+                <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
+                    data-target="#edicaMainNav" aria-controls="collapsibleNavId" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="edicaMainNav">
@@ -27,32 +37,27 @@
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="index.html#about">About</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="blogDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog</a>
-                            <div class="dropdown-menu" aria-labelledby="blogDropdown">
-                                <a class="dropdown-item" href="blog.html">Blog Archive</a>
-                                <a class="dropdown-item" href="blog-single.html">Blog Post</a>
-                            </div>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html#services">Services</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-                            <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                                <a class="dropdown-item" href="404.html">404</a>
-                                <a class="dropdown-item" href="coming-soon.html">Coming Soon</a>
-                            </div>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html#reviews">Reviews</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav mt-2 mt-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><span class="flag-icon flag-icon-squared rounded-circle flag-icon-gb"></span> Eng</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Download</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">Download <i
+                                    class="fa fa-arrow-circle-down"></i></a>
+                            <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                                <a class="dropdown-item" href="#">Android App</a>
+                                <a class="dropdown-item" href="#">IOS App</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -72,37 +77,47 @@
                                 <div class="row">
                                     <div class="form-group col-md-6" data-aos="fade-up">
                                         <label for="name">NAME</label>
-                                        <input type="text" class="form-control" id="name" name="name" placeholder="Your full name">
+                                        <input type="text" class="form-control" id="name" name="name"
+                                            placeholder="Your full name">
                                     </div>
                                     <div class="form-group col-md-6" data-aos="fade-up">
                                         <label for="phone">PHONE</label>
-                                        <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone">
+                                        <input type="text" class="form-control" id="phone" name="phone"
+                                            placeholder="Phone">
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="form-group col-md-6" data-aos="fade-up" data-aos-delay="100">
                                         <label for="email">EMAIL</label>
-                                        <input type="email" class="form-control" id="email" name="email" placeholder="Email address">
+                                        <input type="email" class="form-control" id="email" name="email"
+                                            placeholder="Email address">
                                     </div>
                                     <div class="form-group col-md-6" data-aos="fade-up" data-aos-delay="100">
                                         <label for="subject">SUBJECT</label>
-                                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject">
+                                        <input type="text" class="form-control" id="subject" name="subject"
+                                            placeholder="Subject">
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="form-group col-12" data-aos="fade-up" data-aos-delay="200">
                                         <label for="message">MESSAGE</label>
-                                        <textarea name="message" id="message" rows="9" class="form-control">Textarea field</textarea>
+                                        <textarea name="message" id="message" rows="9" class="form-control"
+                                            placeholder="Message"></textarea>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-warning btn-lg" data-aos="fade-up" data-aos-delay="300">Send Message</button>
+                                <button type="submit" class="btn btn-warning btn-lg" data-aos="fade-up"
+                                    data-aos-delay="300">Send Message</button>
                             </div>
                             <div class="col-md-4 contact-sidebar" data-aos="fade-left">
                                 <h5>Contact us</h5>
-                                <p>Need assistance? Our customer service is here to assist you Monday through Friday from 9 am EST to 10 pm EST.</p>
-                                <p>56 Livingston Street,<br> Brooklyn, NY 11201</p>
+                                <p>Need assistance? Our customer service is here to assist you Monday through Friday
+                                    from 8 am CAT to 10 pm CAT.</p>
+                                <p>173 Oxford Road,<br> Rosebank, Sandton 2196</p>
                                 <div class="embed-responsive embed-responsive-1by1 contact-map">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12090.496282731767!2d-73.98517381282224!3d40.74829681924569!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259041366262b%3A0xfdac298467953648!2sMurray%20Hill%2C%20New%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sin!4v1588137209658!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                                    <iframe
+                                        src="https://maps.google.com/maps?width=600&amp;height=450&amp;hl=en&amp;q=173 Oxford Road, Rosebank&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+                                        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""
+                                        aria-hidden="false" tabindex="0"></iframe>
                                 </div>
                             </div>
                         </div>
@@ -117,10 +132,13 @@
             <div class="footer-banner" data-aos="fade-up">
                 <h1 class="banner-title">Download it now.</h1>
                 <div class="banner-btns-wrapper">
-                    <button class="btn btn-success"> <img src="assets/images/apple@1x.svg" alt="ios" class="mr-2"> App Store</button>
-                    <button class="btn btn-success"> <img src="assets/images/android@1x.svg" alt="android" class="mr-2"> Google Play</button>
+                    <button class="btn btn-success"> <img src="assets/images/apple@1x.svg" alt="ios" class="mr-2"> App
+                        Store</button>
+                    <button class="btn btn-success"> <img src="assets/images/android@1x.svg" alt="android" class="mr-2">
+                        Google Play</button>
                 </div>
-                <p class="banner-text">Add some helper text here to explain the finer details of your <br> product or service.</p>
+                <p class="banner-text">Add some helper text here to explain the finer details of your <br> product or
+                    service.</p>
             </div>
         </div>
     </section>
@@ -129,41 +147,36 @@
             <div class="row footer-widget-area">
                 <div class="col-md-3">
                     <a href="index.html" class="footer-brand-wrapper">
-                        <img src="assets/images/logo.svg" alt="edica logo">
+                        <img src="assets/images/beautyrepubliclogo.png" alt="edica logo" />
                     </a>
-                    <p class="contact-details">hello@edica.com</p>
-                    <p class="contact-details">+23 3000 000 00</p>
+                    <p class="contact-details">hello@br.com</p>
+                    <p class="contact-details">+27 11 875 3200</p>
                     <nav class="footer-social-links">
                         <a href="#!"><i class="fab fa-facebook-f"></i></a>
                         <a href="#!"><i class="fab fa-twitter"></i></a>
-                        <a href="#!"><i class="fab fa-behance"></i></a>
-                        <a href="#!"><i class="fab fa-dribbble"></i></a>
+                        <a href="#!"><i class="fab fa-instagram"></i></a>
                     </nav>
                 </div>
                 <div class="col-md-3">
                     <nav class="footer-nav">
-                        <a href="#!" class="nav-link">Company</a>
                         <a href="#!" class="nav-link">Android App</a>
-                        <a href="#!" class="nav-link">ios App</a>
-                        <a href="#!" class="nav-link">Blog</a>
-                        <a href="#!" class="nav-link">Partners</a>
-                        <a href="#!" class="nav-link">Careers</a>
+                        <a href="#!" class="nav-link">IOS App</a>
+                        <a href="#partners" class="nav-link">Partners</a>
                     </nav>
                 </div>
                 <div class="col-md-3">
                     <nav class="footer-nav">
-                        <a href="#!" class="nav-link">FAQ</a>
-                        <a href="#!" class="nav-link">Reporting</a>
-                        <a href="#!" class="nav-link">Block Storage</a>
-                        <a href="#!" class="nav-link">Tools & Integrations</a>
-                        <a href="#!" class="nav-link">API</a>
-                        <a href="#!" class="nav-link">Pricing</a>
+                        <a href="#!" class="nav-link">Careers</a>
+                        <a href="#!" class="nav-link">Privacy Policy</a>
+                        <a href="#!" class="nav-link">Terms of use</a>
                     </nav>
                 </div>
                 <div class="col-md-3">
                     <div class="dropdown footer-country-dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="footerCountryDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="flag-icon flag-icon-gb flag-icon-squared"></span> United Kingdom <i class="fas fa-chevron-down ml-2"></i>
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="footerCountryDropdown"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="flag-icon flag-icon-za flag-icon-squared"></span> South Africa <i
+                                class="fas fa-chevron-down ml-2"></i>
                         </button>
                         <div class="dropdown-menu" aria-labelledby="footerCountryDropdown">
                             <button class="dropdown-item" href="#">
@@ -177,12 +190,9 @@
                 </div>
             </div>
             <div class="footer-bottom-content">
-                <nav class="nav footer-bottom-nav">
-                    <a href="#!">Privacy & Policy</a>
-                    <a href="#!">Terms</a>
-                    <a href="#!">Site Map</a>
-                </nav>
-                <p class="mb-0">© Edica. 2020 <a href="https://www.bootstrapdash.com" target="_blank" rel="noopener noreferrer" class="text-reset">bootstrapdash</a> . All rights reserved.</p>
+                <p class="mb-0">
+                    © Beauty Republic 2023. All rights reserved by Tshego Letlape & Bongani Ntshingila.
+                </p>
             </div>
         </div>
     </footer>
@@ -194,7 +204,7 @@
         AOS.init({
             duration: 2000
         });
-      </script>
+    </script>
 </body>
 
 </html>
