--- a/index.html
+++ b/index.html
@@ -38,27 +38,26 @@
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="blog-single.html">Blog</a>
+                            <a class="nav-link" href="#services">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#reviews">Reviews</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav mt-2 mt-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><span
-                                    class="flag-icon flag-icon-squared rounded-circle flag-icon-gb"></span>
-                                Eng</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Download <i class="fa fa-arrow-circle-down"></i></a>
+                                aria-haspopup="true" aria-expanded="false">Download <i
+                                    class="fa fa-arrow-circle-down"></i></a>
                             <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                                <a class="dropdown-item" href="404.html">Android App</a>
-                                <a class="dropdown-item" href="coming-soon.html">IOS App</a>
+                                <a class="dropdown-item" href="#">Android App</a>
+                                <a class="dropdown-item" href="#">IOS App</a>
                             </div>
                         </li>
                     </ul>
@@ -166,13 +165,13 @@
     </header>
 
     <main>
-        <section class="edica-landing-section edica-landing-about">
+        <section class="edica-landing-section edica-landing-about" id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6" data-aos="fade-up-right">
                         <h4 class="edica-landing-section-subtitle-alt">ABOUT US</h4>
                         <h2 class="edica-landing-section-title">
-                            1000+ customer using Our application.
+                            1000+ customers using Our application.
                         </h2>
                         <p>
                             Beauty Republic beauty service app, where convenience meets
@@ -199,7 +198,7 @@
                 </div>
             </div>
         </section>
-        <section class="edica-landing-section edica-landing-clients">
+        <section class="edica-landing-section edica-landing-clients" id="partners">
             <div class="container">
                 <h4 class="edica-landing-section-subtitle-alt">PARTNER WITH US</h4>
                 <div class="partners-wrapper">
@@ -218,7 +217,7 @@
                 </div>
             </div>
         </section>
-        <section class="edica-landing-section edica-landing-services">
+        <section class="edica-landing-section edica-landing-services" id="services">
             <div class="container">
                 <h4 class="edica-landing-section-subtitle">Service We Offer</h4>
                 <h2 class="edica-landing-section-title">
@@ -237,7 +236,7 @@
                         <img src="assets/images/internet.svg" alt="card img" class="img-fluid service-card-img" />
                         <h4 class="service-card-title">Large selection</h4>
                         <p class="service-card-description">
-                             Wide range of services to choose from.
+                            Wide range of services to choose from.
                         </p>
                     </div>
                     <div class="col-md-6 landing-service-card" data-aos="fade-right">
@@ -257,7 +256,7 @@
                 </div>
             </div>
         </section>
-        <section class="edica-landing-section edica-landing-testimonials" data-aos="fade-up">
+        <section class="edica-landing-section edica-landing-testimonials" id="reviews" data-aos="fade-up">
             <div class="container">
                 <div id="edicaLandingTestimonialCarousel" class="carousel slide landing-testimonial-carousel"
                     data-ride="carousel">
@@ -268,45 +267,52 @@
                         <div class="carousel-item">
                             <blockquote class="testimonial">
                                 <p>
-                                    “My mission in life is not merely to survive, but to thrive;
-                                    and to do so with some passion, some compassion, some humor,
-                                    and some style.”
+                                    “I'm so glad I found Beauty Republic! It's the perfect way to get my hair and makeup
+                                    done without having to leave my house. The beauty artists are all so talented and
+                                    professional, and they always make me feel great. I highly recommend Beauty Republic
+                                    to anyone who wants to look their best without having to go to the salon.”
                                 </p>
                             </blockquote>
                         </div>
                         <div class="carousel-item">
                             <blockquote class="testimonial">
                                 <p>
-                                    “My mission in life is not merely to survive, but to thrive;
-                                    and to do so with some passion, some compassion, some humor,
-                                    and some style.”
+                                    “I'm a big fan of getting pedicures, but I hate having to schedule them in advance.
+                                    That's why I love Beauty Republic. I can have a professional nail technician come to
+                                    my home or office for a pedicure on short notice. It's the perfect solution for when
+                                    I need a last-minute pedicure for a special event.”
                                 </p>
                             </blockquote>
                         </div>
                         <div class="carousel-item active">
                             <blockquote class="testimonial">
                                 <p>
-                                    “My mission in life is not merely to survive, but to thrive;
-                                    and to do so with some passion, some compassion, some humor,
-                                    and some style.”
+                                    “I've been using Beauty Republic for a few months now, and I'm so glad I found it.
+                                    It's a great way to save time and money on my beauty treatments. I don't have to
+                                    drive to and from the salon, and I don't have to tip the salon staff. I highly
+                                    recommend Beauty Republic to anyone who wants to save time and money on their beauty
+                                    needs.”
                                 </p>
                             </blockquote>
                         </div>
                         <div class="carousel-item">
                             <blockquote class="testimonial">
                                 <p>
-                                    “My mission in life is not merely to survive, but to thrive;
-                                    and to do so with some passion, some compassion, some humor,
-                                    and some style.”
+                                    “I was so glad I found Beauty Republic when I had a last-minute event to attend. I
+                                    was able to book an appointment with a beauty artist on short notice, and she did a
+                                    great job. I was so happy with the results, and I didn't have to worry about driving
+                                    to and from the salon. I highly recommend Beauty Republic to anyone who needs a
+                                    last-minute beauty treatment.”
                                 </p>
                             </blockquote>
                         </div>
                         <div class="carousel-item">
                             <blockquote class="testimonial">
                                 <p>
-                                    “My mission in life is not merely to survive, but to thrive;
-                                    and to do so with some passion, some compassion, some humor,
-                                    and some style.”
+                                    “As a busy woman, I don't have time to go to the salon for my beauty treatments. But
+                                    with Beauty Republic, I can have a professional beauty artist come to my home or
+                                    office. It's so convenient and affordable, and I always love the results. I highly
+                                    recommend Beauty Republic to any busy woman who wants to look her best.”
                                 </p>
                             </blockquote>
                         </div>
@@ -315,79 +321,43 @@
                         <li data-target="#edicaLandingTestimonialCarousel" data-slide-to="0">
                             <img src="assets/images/oval-copy-3.png" alt="avatar" />
                             <div class="user-details">
-                                <h6>Gabie Sheber</h6>
-                                <p>Developer</p>
+                                <h6>Sarah J.</h6>
+                                <p>Content Creator</p>
                             </div>
                         </li>
                         <li data-target="#edicaLandingTestimonialCarousel" data-slide-to="1">
                             <img src="assets/images/oval-copy-4.png" alt="avatar" />
                             <div class="user-details">
-                                <h6>Gabie Sheber</h6>
-                                <p>Developer</p>
+                                <h6>Matshepo S.</h6>
+                                <p>Marketing Manager</p>
                             </div>
                         </li>
                         <li data-target="#edicaLandingTestimonialCarousel" data-slide-to="2" class="active">
                             <img src="assets/images/oval.png" alt="avatar" />
                             <div class="user-details">
-                                <h6>Gabie Sheber</h6>
-                                <p>Developer</p>
+                                <h6>Dineo N.</h6>
+                                <p>Sales Agent</p>
                             </div>
                         </li>
                         <li data-target="#edicaLandingTestimonialCarousel" data-slide-to="3">
                             <img src="assets/images/oval-copy.png" alt="avatar" />
                             <div class="user-details">
-                                <h6>Gabie Sheber</h6>
-                                <p>Developer</p>
+                                <h6>Lauren B.</h6>
+                                <p>Influencer</p>
                             </div>
                         </li>
                         <li data-target="#edicaLandingTestimonialCarousel" data-slide-to="4">
                             <img src="assets/images/oval-copy-2.png" alt="avatar" />
                             <div class="user-details">
-                                <h6>Gabie Sheber</h6>
-                                <p>Developer</p>
+                                <h6>Jessica W.</h6>
+                                <p>Brand Strategist</p>
                             </div>
                         </li>
                     </ol>
                 </div>
             </div>
         </section>
-        <section class="edica-landing-section edica-landing-blog">
-            <div class="container">
-                <h4 class="edica-landing-section-subtitle" data-aos="fade-up">
-                    Blog posts
-                </h4>
-                <h2 class="edica-landing-section-title" data-aos="fade-up">
-                    Check our app latest blog post <br />
-                    for more update.
-                </h2>
-                <div class="row">
-                    <div class="col-md-4 landing-blog-post" data-aos="fade-right">
-                        <img src="assets/images/rectangle.png" alt="blog post" class="blog-post-thumbnail" />
-                        <p class="blog-post-category">Blog post</p>
-                        <h4 class="blog-post-title">
-                            Check our latest blog post for more update.
-                        </h4>
-                        <a href="#!" class="blog-post-link">Learn more</a>
-                    </div>
-                    <div class="col-md-4 landing-blog-post" data-aos="fade-up">
-                        <img src="assets/images/rectangle-copy.png" alt="blog post" class="blog-post-thumbnail" />
-                        <p class="blog-post-category">Blog post</p>
-                        <h4 class="blog-post-title">
-                            Check our latest blog post for more update.
-                        </h4>
-                        <a href="#!" class="blog-post-link">Learn more</a>
-                    </div>
-                    <div class="col-md-4 landing-blog-post" data-aos="fade-left">
-                        <img src="assets/images/rectangle-copy-2.png" alt="blog post" class="blog-post-thumbnail" />
-                        <p class="blog-post-category">Blog post</p>
-                        <h4 class="blog-post-title">
-                            Check our latest blog post for more update.
-                        </h4>
-                        <a href="#!" class="blog-post-link">Learn more</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+
     </main>
     <section class="edica-footer-banner-section">
         <div class="container">
@@ -423,35 +393,28 @@
                     <nav class="footer-social-links">
                         <a href="#!"><i class="fab fa-facebook-f"></i></a>
                         <a href="#!"><i class="fab fa-twitter"></i></a>
-                        <a href="#!"><i class="fab fa-behance"></i></a>
-                        <a href="#!"><i class="fab fa-dribbble"></i></a>
+                        <a href="#!"><i class="fab fa-instagram"></i></a>
                     </nav>
                 </div>
                 <div class="col-md-3">
                     <nav class="footer-nav">
-                        <a href="#!" class="nav-link">Company</a>
                         <a href="#!" class="nav-link">Android App</a>
-                        <a href="#!" class="nav-link">ios App</a>
-                        <a href="#!" class="nav-link">Blog</a>
-                        <a href="#!" class="nav-link">Partners</a>
-                        <a href="#!" class="nav-link">Careers</a>
+                        <a href="#!" class="nav-link">IOS App</a>
+                        <a href="#partners" class="nav-link">Partners</a>
                     </nav>
                 </div>
                 <div class="col-md-3">
                     <nav class="footer-nav">
-                        <a href="#!" class="nav-link">FAQ</a>
-                        <a href="#!" class="nav-link">Reporting</a>
-                        <a href="#!" class="nav-link">Block Storage</a>
-                        <a href="#!" class="nav-link">Tools & Integrations</a>
-                        <a href="#!" class="nav-link">API</a>
-                        <a href="#!" class="nav-link">Pricing</a>
+                        <a href="#!" class="nav-link">Careers</a>
+                        <a href="#!" class="nav-link">Privacy Policy</a>
+                        <a href="#!" class="nav-link">Terms of use</a>
                     </nav>
                 </div>
                 <div class="col-md-3">
                     <div class="dropdown footer-country-dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="footerCountryDropdown"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="flag-icon flag-icon-gb flag-icon-squared"></span>
+                            <span class="flag-icon flag-icon-za flag-icon-squared"></span>
                             South Africa <i class="fas fa-chevron-down ml-2"></i>
                         </button>
                         <div class="dropdown-menu" aria-labelledby="footerCountryDropdown">
@@ -468,11 +431,6 @@
                 </div>
             </div>
             <div class="footer-bottom-content">
-                <nav class="nav footer-bottom-nav">
-                    <a href="#!">Privacy & Policy</a>
-                    <a href="#!">Terms</a>
-                    <a href="#!">Site Map</a>
-                </nav>
                 <p class="mb-0">
                     © Beauty Republic 2023. All rights reserved by Tshego Letlape & Bongani Ntshingila.
                 </p>
