--- a/contact.html
+++ b/contact.html
@@ -136,9 +136,12 @@
                         Store</button>
                     <button class="btn btn-success"> <img src="assets/images/android@1x.svg" alt="android" class="mr-2">
                         Google Play</button>
+                        
                 </div>
-                <p class="banner-text">Add some helper text here to explain the finer details of your <br> product or
-                    service.</p>
+                <p class="banner-text">
+                    Download the BeautyRepulic app today and let us bring the salon
+                    experience to your doorstep.
+                  </p>
             </div>
         </div>
     </section>
@@ -161,7 +164,7 @@
                     <nav class="footer-nav">
                         <a href="#!" class="nav-link">Android App</a>
                         <a href="#!" class="nav-link">IOS App</a>
-                        <a href="#partners" class="nav-link">Partners</a>
+                        <a href="index.html#partners" class="nav-link">Partners</a>
                     </nav>
                 </div>
                 <div class="col-md-3">
